--- a/package.json
+++ b/package.json
@@ -24,5 +24,12 @@
   "bugs": {
     "url": "https://github.com/Arrow-air/Arrow-Contracts/issues"
   },
-  "homepage": "https://github.com/Arrow-air/Arrow-Contracts#readme"
+  "homepage": "https://github.com/Arrow-air/Arrow-Contracts#readme",
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0",
+    "@openzeppelin/contracts-upgradeable": "^4.5.1"
+  },
+  "devDependencies": {
+    "hardhat": "^2.8.4"
+  }
 }
