--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@openzeppelin/contracts-upgradeable": "^4.5.1"
   },
   "devDependencies": {
-    "hardhat": "^2.8.4"
+    "hardhat": "^2.8.4",
+    "hardhat-deploy": "^0.10.5"
   }
 }
