Update and rename node.js.yml to HardhatTests.js.yml

--- a/.github/workflows/HardhatTests.js.yml
+++ b/.github/workflows/HardhatTests.js.yml
@@ -5,11 +5,11 @@ name: Hardhat Tests
 on:
   push:
     paths-ignore:
-      -'.github/workflows/**'
+      -'**/HardhatTests.js.yml'
     branches: [ main ]
   pull_request:
     paths-ignore:
-      -'.github/workflows/**'
+      -'**/HardhatTests.js.yml'
     branches: [ main ]
   schedule:
     # run this workflow every Monday at 1PM UTC
