--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Smart contracts defining the ArrowAir token and governance",
   "main": "index.js",
   "directories": {
-    "test": "test"
+    "test": "tests"
   },
   "scripts": {
-    "test": "npx hardhat test",
+    "test": "brownie test",
     "verifyOptimismKovan": "npx hardhat verify --network optimismKovan",
     "deployOptimismKovan": "npx hardhat deploy --network optimismKovan"
   },
@@ -40,9 +40,6 @@
   },
   "devDependencies": {
     "hardhat": "^2.8.4",
-    "hardhat-deploy": "^0.10.5",
-    "@openzeppelin/hardhat-upgrades": "^1.14.0",
-    "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.0"
+    "hardhat-deploy": "^0.10.5"
   }
 }
