--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Smart contracts defining the ArrowAir token and governance",
   "main": "index.js",
   "directories": {
-    "test": "tests"
+    "test": "test"
   },
   "scripts": {
-    "test": "brownie test",
+    "test": "npx hardhat test",
     "verifyOptimismKovan": "npx hardhat verify --network optimismKovan",
     "deployOptimismKovan": "npx hardhat deploy --network optimismKovan"
   },
@@ -39,6 +39,8 @@
     "web3": "^1.7.0"
   },
   "devDependencies": {
+    "chai": "^4.3.6",
+    "ethereum-waffle": "^4.0.0-alpha.0",
     "hardhat": "^2.8.4",
     "hardhat-deploy": "^0.10.5"
   }
