--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "npx hardhat test",
     "verifyOptimismKovan": "npx hardhat verify --network optimismKovan",
-    "deployOptimismKovan": "npx hardhat deploy --network optimismKovan"
+    "deployOptimismKovan": "npx hardhat run --network optimismKovan deploy/deployArrowTokenHot.js"
   },
   "repository": {
     "type": "git",
