--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "chai": "^4.3.6",
     "ethereum-waffle": "^4.0.0-alpha.0",
     "hardhat": "^2.8.4",
-    "hardhat-deploy": "^0.10.5"
+    "hardhat-deploy": "^0.10.5",
+    "prettier": "2.6.1"
   }
 }
