--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "scripts": {
     "test": "npx hardhat test",
     "verifyOptimismKovan": "npx hardhat verify --network optimismKovan",
-    "deployOptimismKovan": "npx hardhat deploy --network optimismKovan"
+    "deployOptimismKovan": "npx hardhat deploy --network optimismKovan",
+    "lint": "solhint \"contracts/**/*.sol\"",
+    "prettier": "prettier --config .prettierrc.json --write \"{contracts,test, deploy}/**/*.{js,json,sol,ts}\"",
+    "prettier:list-different": "prettier --config .prettierrc.json --list-different \"**/*.{js,json,sol,ts}\"",
+    "prettier:contracts": "prettier --config .prettierrc --list-different \"{contracts}/**/*.sol\""
   },
   "repository": {
     "type": "git",
@@ -41,9 +45,15 @@
   "devDependencies": {
     "@openzeppelin/hardhat-upgrades": "^1.16.1",
     "chai": "^4.3.6",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "ethereum-waffle": "^4.0.0-alpha.0",
     "hardhat": "^2.8.4",
     "hardhat-deploy": "^0.10.5",
-    "prettier": "2.6.1"
+    "prettier": "2.6.1",
+    "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solhint": "^3.3.7",
+    "solhint-plugin-prettier": "^0.0.5"
   }
 }
