--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.5.0",
     "@openzeppelin/contracts-upgradeable": "^4.5.1",
+    "@primitivefi/hardhat-dodoc": "^0.2.3",
     "dotenv": "^16.0.0",
     "ethers": "^5.5.4",
     "web3": "^1.7.0"
