--- a/.github/workflows/HardhatTests.yml
+++ b/.github/workflows/HardhatTests.yml
@@ -17,12 +17,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+      - name: Install dependencies Node.js version ${{ matrix.node-version }}
+        uses: ./.github/actions/install
         with:
           node-version: ${{ matrix.node-version }}
-          cache: "npm"
-      - name: Install dependencies
-        run: npm ci
       - name: Run hardhat tests
         run: npm run test
