--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "npx hardhat test",
+    "dodoc": "npx hardhat dodoc",
     "verifyOptimismKovan": "npx hardhat verify --network optimismKovan",
     "deployOptimismKovan": "npx hardhat deploy --network optimismKovan"
   },
