--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "scripts": {
     "test": "npx hardhat test",
     "dodoc": "npx hardhat dodoc",
-    "verifyOptimismKovan": "npx hardhat verify --network optimismKovan",
-    "deployOptimismKovan": "npx hardhat deploy --network optimismKovan"
+    "deployOptimismKovan": "npx hardhat deploy --network optimismKovan --tags Deployment"
   },
   "repository": {
     "type": "git",
