--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@openzeppelin/hardhat-defender": "^1.6.0",
     "@openzeppelin/hardhat-upgrades": "^1.16.1",
     "chai": "^4.3.6",
-    "ethereum-waffle": "^4.0.0-alpha.0",
+    "ethereum-waffle": "^3.0.0",
     "hardhat": "^2.8.4",
     "hardhat-deploy": "^0.10.5"
   }
