Implement L2 Token Contracts for Optimism
A new deployment script is added to support L2 token creation on
Optimism networks.

Added several fields to .env.example for L2 token deployment related
secrets/variables.

Run npm run deployL2TokenOptimismKovan to test out L2 token contract
creation.

Also added a note to README to address an build cache related issue when
verifying contracts.

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ DEFENDER_TEAM_API_SECRET_KEY=<SECRET_KEY>
 ARROW_TOKEN_PROXY_CONTRACT=<TOKEN_ADDRESS>
 ARROW_TOKEN_MUTISIG=<MULTISIG_ADDRESS>
 
+# L2 token deployment required secrets
+L1_TOKEN_ADDRESS=
