--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "npx hardhat test",
     "dodoc": "npx hardhat dodoc",
-    "deployOptimismKovan": "npx hardhat deploy --network optimismKovan --tags Deployment"
+    "deployOptimismKovan": "npx hardhat deploy --network optimismKovan --tags Deployment",
+    "deployL2TokenOptimismKovan": "npx hardhat deploy --network optimismKovan --tags L2Token" 
   },
   "repository": {
     "type": "git",
@@ -28,6 +29,7 @@
   },
   "homepage": "https://github.com/Arrow-air/Arrow-Contracts#readme",
   "dependencies": {
+    "@eth-optimism/contracts": "^0.5.27",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.1",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
@@ -43,7 +45,7 @@
     "@openzeppelin/hardhat-defender": "^1.6.0",
     "@openzeppelin/hardhat-upgrades": "^1.16.1",
     "chai": "^4.3.6",
-    "ethereum-waffle": "^4.0.0-alpha.0",
+    "ethereum-waffle": "^3.0.0",
     "hardhat": "^2.8.4",
     "hardhat-deploy": "^0.10.5"
   }
