Enable ERC-20 asset transfers between L1 and L2
Included a bridging script to support asset transfers between Ethereum
and Optimism. Configured associcated settings and packages to support
the bridging script.

To perform a bridging operation:

1. Deploy a token contract on an L1 network. Note that for testnets,
   Optimism does not support Rinkeby as there are no bridging contracts
   exist on that chain. (See [SDK](https://github.com/ethereum-optimism/optimism/blob/develop/packages/sdk/src/utils/contracts.ts#L54-L113))
2. Update the `L1_TOKEN_ADDRESS` field in `.env`
3. Deploy an L2 token contract with `npm run deployL2TokenOptimismKovan`
4. Update the `L2_TOKEN_ADDRESS` field in `.env`
5. Run `npm run depositTokenToL2` to transfer a certain amount (defined
   in `bridgeArrowToken.js`) of tokens to L2. Similarly, transfer tokens
   from L2 back to L1 by running `npm run withdrawTokenToL1`. It will
   take a quite while, so good time to grab a coffee :)
6. Call `balanceOf` on respective chains to test if bridging was
   successful

Tests were done on [here](https://kovan.etherscan.io/address/0x98Ac3742996543E09430DeD7A360eCAC07460E63) and [here](https://kovan-optimistic.etherscan.io/address/0x67352C8FA4caA3a2d1C36F4FebC513d00Cf2aAA9).

For each contract, feel free to inspect the transaction logs to check
the correctness of bridging operations.

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,6 @@ ARROW_TOKEN_MUTISIG=<MULTISIG_ADDRESS>
 
 # L2 token deployment required secrets
 L1_TOKEN_ADDRESS=
+
+# Bridging operations related secrets
+L2_TOKEN_ADDRESS=
